plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.3'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'jacoco'
	id "org.sonarqube" version "4.4.1.3373"
}

group = 'ludogorie-soft'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

	implementation group: 'org.mnode.ical4j', name: 'ical4j', version: '3.0.24'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
//	implementation 'org.liquibase:liquibase-core'
	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.6.0'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
//	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	runtimeOnly 'com.h2database:h2'
	implementation 'org.modelmapper:modelmapper:3.1.1'
	implementation 'org.liquibase:liquibase-core:4.29.2'

	implementation 'com.stripe:stripe-java:27.0.0'
	implementation 'javax.annotation:javax.annotation-api:1.3.2'
	implementation 'org.yaml:snakeyaml:2.3'
	implementation 'org.springframework.boot:spring-boot-starter-mail:3.3.5'
	implementation 'com.sun.mail:jakarta.mail:2.0.1'
	testImplementation 'com.icegreen:greenmail:2.1.1'

}

tasks.named('test') {
	useJUnitPlatform()
}

jacoco {
	toolVersion = "0.8.12"
}

test {
	finalizedBy jacocoTestReport
}
jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		csv.required = false
	}
}

jacocoTestCoverageVerification {
	violationRules {
		enabled = false
		rule {
			limit {
				minimum = 0.8
			}
		}
	}
}

check.dependsOn jacocoTestCoverageVerification

sonar {
	properties {
		property "sonar.projectKey", "Ludogorie-Soft_reservations-platform-be"
		property "sonar.organization", "ludogorie-soft-1"
		property "sonar.host.url", "https://sonarcloud.io"
	}
}
